@@ -1,0 +1,14 @@
+<html>
+    <head>
+        <title>Ant task for Castor code generator</title>
+    </head>
+    <body>
+        This package contains ant task for Castor code generator.
+        <dl>
+            <dt><b>Author: </b></dt>
+        	<dd><a href="mailto:joel DOT farquhar AT montage-dmc DOT com">Joel Farquhar</a></dd>
+            <dt><b>Author: </b></dt>
+        	<dd><a href="mailto:bruce DOT snyder AT gmail DOT com">Bruce Snyder</a></dd>
+        </dl>
+    </body>
+</html>
