@@ -1,0 +1,12 @@
+<html>
+    <head>
+        <title>Ant task for Castor code generator</title>
+    </head>
+    <body>
+        This package contains ant task for Castor code generator.
+        <dl>
+            <dt><b>Author: </b></dt>
+        	<dd><a href="mailto:kvisco AT kvisco DOT com">Keith Visco</a></dd>
+        </dl>
+    </body>
+</html>
